--- a/main.html
+++ b/main.html
@@ -8,6 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<img class="moviePic" src="https://images.justwatch.com/poster/118339636/s718/avengers-endgame.jpg">
+		<p class="movieDetail">This is the movie detail text.</p>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
